merge release crypto-primitives 1.5.0.0-b17