@@ -19,8 +19,7 @@ import static ch.post.it.evoting.cryptoprimitives.internal.elgamal.ElGamalMultiR
 import static ch.post.it.evoting.cryptoprimitives.internal.mixnet.TestParser.parseCiphertexts;
 import static ch.post.it.evoting.cryptoprimitives.internal.mixnet.TestParser.parseCommitment;
 import static ch.post.it.evoting.cryptoprimitives.internal.mixnet.TestShuffleArgumentGenerator.ShuffleArgumentPair;
-import static java.util.stream.Collectors.collectingAndThen;
-import static java.util.stream.Collectors.toList;
+import static ch.post.it.evoting.cryptoprimitives.math.GroupVector.toGroupVector;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -47,6 +46,8 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import ch.post.it.evoting.cryptoprimitives.collection.ImmutableByteArray;
+import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
 import ch.post.it.evoting.cryptoprimitives.elgamal.ElGamalMultiRecipientCiphertext;
 import ch.post.it.evoting.cryptoprimitives.elgamal.ElGamalMultiRecipientMessage;
 import ch.post.it.evoting.cryptoprimitives.elgamal.ElGamalMultiRecipientPublicKey;
@@ -200,7 +201,7 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 			final GroupVector<ElGamalMultiRecipientCiphertext, GqGroup> shuffledCiphertexts = IntStream.range(0, N)
 					.mapToObj(i -> getCiphertext(ones, randomness.get(i), publicKey)
 							.getCiphertextProduct(ciphertexts.get(permutation.get(i))))
-					.collect(collectingAndThen(toList(), GroupVector::from));
+					.collect(toGroupVector());
 
 			shuffleStatement = new ShuffleStatement(ciphertexts, shuffledCiphertexts);
 		}
@@ -275,7 +276,7 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 			final GroupVector<ElGamalMultiRecipientCiphertext, GqGroup> shuffledCiphertexts = IntStream.range(0, N)
 					.mapToObj(i -> getCiphertext(ones, shuffleWitness.get_rho().get(i), longerPublicKey)
 							.getCiphertextProduct(longerCiphertexts.get(shuffleWitness.get_pi().get(i))))
-					.collect(collectingAndThen(toList(), GroupVector::from));
+					.collect(toGroupVector());
 
 			final ShuffleStatement longerCiphertextsStatement = new ShuffleStatement(longerCiphertexts, shuffledCiphertexts);
 
@@ -289,13 +290,12 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 		void getShuffleArgumentCiphertextsShuffledCiphertextsDiff() {
 			// Modify the shuffled ciphertexts by replacing its first element by a different ciphertext.
 			final List<ElGamalMultiRecipientCiphertext> shuffledCiphertexts = new ArrayList<>(shuffleStatement.get_C_prime());
-			final ElGamalMultiRecipientCiphertext first = shuffledCiphertexts.get(0);
+			final ElGamalMultiRecipientCiphertext first = shuffledCiphertexts.getFirst();
 			final ElGamalMultiRecipientCiphertext otherFirst = Generators.genWhile(() -> elGamalGenerator.genRandomCiphertext(l), first::equals);
 			shuffledCiphertexts.set(0, otherFirst);
 
 			// Recreate shuffled ciphertexts and statement.
-			final GroupVector<ElGamalMultiRecipientCiphertext, GqGroup> differentShuffledCiphertexts = GroupVector.from(
-					shuffledCiphertexts);
+			final GroupVector<ElGamalMultiRecipientCiphertext, GqGroup> differentShuffledCiphertexts = GroupVector.from(shuffledCiphertexts);
 			final ShuffleStatement differentShuffleStatement = new ShuffleStatement(this.shuffleStatement.get_C(),
 					differentShuffledCiphertexts);
 
@@ -341,7 +341,7 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 			// Necessary to return a constant value, otherwise some assertFalse tests can return true because of changes compensating each other (due
 			// to small test groups).
 			final HashService hashServiceMock = mock(HashService.class);
-			when(hashServiceMock.recursiveHash(any(Hashable[].class))).thenReturn(new byte[] { 0b10 });
+			when(hashServiceMock.recursiveHash(any(Hashable[].class))).thenReturn(ImmutableByteArray.of((byte) 0b10));
 
 			shuffleArgumentService = new ShuffleArgumentService(publicKey, commitmentKey, randomService, hashServiceMock);
 		}
@@ -442,7 +442,7 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 
 			final VerificationResult verificationResult = shuffleArgumentService.verifyShuffleArgument(badShuffleStatement, shuffleArgument, m, n);
 			assertFalse(verificationResult.isVerified());
-			assertEquals("Failed to verify MultiExponentiation Argument.", verificationResult.getErrorMessages().element());
+			assertEquals("Failed to verify MultiExponentiation Argument.", verificationResult.getErrorMessages().get(0));
 		}
 
 		@Test
@@ -450,7 +450,7 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 		void verifyShuffleArgumentIncorrectCA() {
 			final GroupVector<GqElement, GqGroup> commitmentA = shuffleArgument.get_c_A();
 
-			final GqElement badCA0 = commitmentA.get(0).multiply(gqGroup.getGenerator());
+			final GqElement badCA0 = commitmentA.getFirst().multiply(gqGroup.getGenerator());
 			final GroupVector<GqElement, GqGroup> badCommitmentA = GroupVectors.set(commitmentA, 0, badCA0);
 			final ShuffleArgument badShuffleArgument = new ShuffleArgument.Builder()
 					.with_c_A(badCommitmentA)
@@ -461,7 +461,7 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 
 			final VerificationResult verificationResult = shuffleArgumentService.verifyShuffleArgument(shuffleStatement, badShuffleArgument, m, n);
 			assertFalse(verificationResult.isVerified());
-			assertEquals("Failed to verify Product Argument.", verificationResult.getErrorMessages().getFirst());
+			assertEquals("Failed to verify Product Argument.", verificationResult.getErrorMessages().get(0));
 		}
 
 		@Test
@@ -469,7 +469,7 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 		void verifyShuffleArgumentIncorrectCB() {
 			final GroupVector<GqElement, GqGroup> commitmentB = shuffleArgument.get_c_B();
 
-			final GqElement badCBm = commitmentB.get(0).multiply(gqGroup.getGenerator());
+			final GqElement badCBm = commitmentB.getFirst().multiply(gqGroup.getGenerator());
 			final GroupVector<GqElement, GqGroup> badCommitmentB = GroupVectors.set(commitmentB, 0, badCBm);
 			final ShuffleArgument badShuffleArgument = new ShuffleArgument.Builder()
 					.with_c_A(shuffleArgument.get_c_A())
@@ -480,7 +480,7 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 
 			final VerificationResult verificationResult = shuffleArgumentService.verifyShuffleArgument(shuffleStatement, badShuffleArgument, m, n);
 			assertFalse(verificationResult.isVerified());
-			assertEquals("Failed to verify Product Argument.", verificationResult.getErrorMessages().getFirst());
+			assertEquals("Failed to verify Product Argument.", verificationResult.getErrorMessages().get(0));
 		}
 
 		@Test
@@ -517,7 +517,7 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 
 			final VerificationResult verificationResult = shuffleArgumentService.verifyShuffleArgument(shuffleStatement, badShuffleArgument, m, n);
 			assertFalse(verificationResult.isVerified());
-			assertEquals("Failed to verify Product Argument.", verificationResult.getErrorMessages().element());
+			assertEquals("Failed to verify Product Argument.", verificationResult.getErrorMessages().get(0));
 		}
 
 		@Test
@@ -546,11 +546,11 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 
 			final VerificationResult verificationResult = shuffleArgumentService.verifyShuffleArgument(shuffleStatement, badShuffleArgument, m, n);
 			assertFalse(verificationResult.isVerified());
-			assertEquals("Failed to verify MultiExponentiation Argument.", verificationResult.getErrorMessages().getFirst());
+			assertEquals("Failed to verify MultiExponentiation Argument.", verificationResult.getErrorMessages().get(0));
 		}
 
 		Stream<Arguments> jsonData() {
-			final List<TestParameters> parametersList = TestParameters.fromResource("/mixnet/verify-shuffle-argument.json");
+			final ImmutableList<TestParameters> parametersList = TestParameters.fromResource("/mixnet/verify-shuffle-argument.json");
 
 			return parametersList.stream().parallel().map(testParameters -> {
 				// Context.
@@ -596,7 +596,7 @@ class ShuffleArgumentServiceTest extends TestGroupSetup {
 
 				//Output
 				final JsonData output = testParameters.getOutput();
-				final boolean outputValue = Boolean.parseBoolean(output.toString());
+				final boolean outputValue = Boolean.parseBoolean(output.getJsonData("result").toString());
 
 				return Arguments.of(publicKey, commitmentKey, statement, argument, m, n, outputValue, testParameters.getDescription());
 			});
